--- a/src/style.css
+++ b/src/style.css
@@ -7,3 +7,45 @@ html {
 * {
   transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
 }
+
+:root {
+  font-family: 'Archivo', sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+
+  color-scheme: light;
+  background-color: var(--surface-ground);
+  color: var(--text-color);
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+/* Tema claro por defecto */
+:root:not(.dark) {
+  --surface-ground: var(--surface-50);
+  --text-color: var(--surface-900);
+}
+
+/* Tema oscuro */
+:root.dark {
+  color-scheme: dark;
+  --surface-ground: var(--surface-900);
+  --text-color: var(--surface-0);
+}
+
+body {
+  margin: 0;
+  min-width: 320px;
+  min-height: 100vh;
+  background-color: var(--surface-ground);
+  color: var(--text-color);
+}
+
+#app {
+  width: 100%;
+  height: 100vh;
+  background-color: var(--surface-ground);
+}
